[tool.poetry]
name = "grid3"
version = "0.1.3"
description = "Modules for interacting with ThreeFold Grid v3."
authors = ["Scott Yeager <scott@threefold.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "grid3"}]

[tool.poetry.dependencies]
python = "^3.0"
requests = "^2.31.0"
gql = {extras = ["requests"], version = "^3.4.1"}
substrate-interface = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
