[tool.poetry]
name = "grid3"
version = "0.1.4"
description = "Modules for interacting with ThreeFold Grid v3."
authors = ["Scott Yeager <scott@threefold.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "grid3"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
gql = {extras = ["requests"], version = "^3.4.1"}
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
